Fixed ece243 images

--- a/ProjectSites/ece243.html
+++ b/ProjectSites/ece243.html
@@ -68,7 +68,8 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="../assets/img/SiteImages/295Img/diagram.png" class="img-fluid border border-dark" alt="">
+            <img src="../assets/img/SiteImages/243Img/ece243.png" class="img-fluid border border-dark" alt="" style="height: 250px; object-fit: cover;">
+            <img src="../assets/img/SiteImages/243Img/de1soc.jpg" class="img-fluid border border-dark" alt="" style="height: 225px; object-fit: cover;">
           </div>
         <div class="col-lg-8 content">  
           <h3><strong>Reversi Game for the DE1-SoC Board <i class="bi bi-cpu"></i></strong></h3>
