Edit ece243 html

--- a/ProjectSites/ece243.html
+++ b/ProjectSites/ece243.html
@@ -74,7 +74,7 @@
         <div class="col-lg-8 content">  
           <h3><strong>Reversi Game for the DE1-SoC Board <i class="bi bi-cpu"></i></strong></h3>
           <p>
-            For the course project in ECE243 (Computer Organization), I programmed the game <em>Reversi</em> 
+            For the course project in ECE243 (Computer Organization), I worked with another student and programmed the game <em>Reversi</em> 
             in <strong>embedded C</strong> to be run on the DE1-SoC development board. The game allows for two local players to play against each other and supports 
             real-time <strong>PS/2 mouse input</strong> for piece selection, a dynamically rendered <strong>VGA display</strong> using pixel-level buffer
             manipulation, legal move highlighting with graphical indicators, score calculation and display using 
