--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
           <embed src="assets/Hisham Kaleem - Resume.pdf" type="application/pdf" width="100%" height="100%">
         </div>
         <div class="text-center mt-3">
-          <a href="assets/Hisham Kaleem - Resume.pdf" class="btn btn-dark" target="_blank" download>
+          <a href="assets/Hisham Kaleem - Resume.pdf" class="btn btn-primary" target="_blank" download>
             <i class="bi bi-download me-2"></i>Download Resume
           </a>
         </div>
@@ -409,6 +409,7 @@
             </div>
             <div class="text-center">
               <button type="submit" class="btn btn-primary">Send Message</button>
+              <button type="reset" class="btn btn-dark">Reset</button>
             </div>
           </form>
         </div>
