Added discipline tags

--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
       <img src="assets/img/WorkImg/utat.jpg" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>FINCH Firmware + Data Engineer - UTAT 🛰️</strong></h5>
+            <span class="badge bg-dark me-1">High-Level Software <i class="bi bi-code-slash"></i></span>
+            <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
         <p class="card-text"><em>Coming Soon!</em></p>
       </div>
     </div>
@@ -199,6 +201,7 @@
       <img src="assets/img/WorkImg/art.jpeg" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>Embedded Systems Engineer - UTRA ART 🤖</strong></h5>
+            <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
         <p class="card-text"><em>Wrote a C++ Script that interacts with an Arduino and Raspberry Pi to recieve and
           enable brake signals for smooth rover braking</em></p>
       </div>
@@ -211,6 +214,9 @@
       <img src="assets/img/WorkImg/testing.jpeg" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>Mechatronics Research Intern - WERL 🔬</strong></h5>
+          <span class="badge bg-danger me-1">Hardware Engineering <i class="bi bi-cpu"></i></span>
+          <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
+           <span class="badge bg-success me-1 mb-2">CAD Design <i class="bi bi-pc-display"></i></span>
         <p class="card-text"><em>Devised/prototyped an economical, water-resistant sensor probe device to accurately
         estimate dissolved solids levels in septic-tank wastewater in rural communities</em></p>
         <a href="WorkSites/werl.html" class="btn btn-outline-primary">Read More</a>
@@ -224,6 +230,7 @@
       <img src="assets/img/WorkImg/PCB.png" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>PCB Engineering Intern - Jitterware Inc 📟</strong></h5>
+          <span class="badge bg-danger me-1">Hardware Engineering <i class="bi bi-cpu"></i></span>
         <p class="card-text"><em>Designed schematics and a multilayer PCB in KiCAD for an open-source, analog hall-effect sensor keyboard </em></p>
         <a href="WorkSites/jitterware.html" class="btn btn-outline-primary">Read More</a>
       </div>
@@ -236,6 +243,7 @@
       <img src="assets/img/WorkImg/esp2.png" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>Programming Lead - ESPII Project 💻</strong></h5>
+          <span class="badge bg-dark me-1 mb-2">High-Level Software <i class="bi bi-code-slash"></i></span>
         <p class="card-text"><em>Created a Python script to automatically produce custom powerpoints 
           with AI-generated article summaries for a SickKids Hospital Research Team</em></p>
         <a href="WorkSites/esp2.html" class="btn btn-outline-primary">Read More</a>
@@ -249,6 +257,7 @@
       <img src="assets/img/WorkImg/esp1.jpeg" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>CAD Design Lead - ESPI Project 🛠️</strong></h5>
+          <span class="badge bg-success me-1 mb-2">CAD Design <i class="bi bi-pc-display"></i></span>
         <p class="card-text"><em>Led the CAD Design in Fusion 360 for an accessible enterance to a campus theater, icorporating
           motorized walkways, wheelchair lifts, LED direction indication, and accessible theater seating
         </em></p>
@@ -279,7 +288,7 @@
         <div class="portfolio-content h-100">
           <img src="assets/img/ProjectImg/295PCB.jpeg" class="img-fluid border border-dark" alt="">
           <div class="portfolio-info">
-            <h4>Hardware Engineering</h4>
+            <span class="badge bg-danger me-1">Hardware Engineering <i class="bi bi-cpu"></i></span>
             <p>Software Defined Radio (SDR) RX Receiver Chain</p>
             <a href="ProjectSites/ece295.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
@@ -291,7 +300,7 @@
         <div class="portfolio-content h-100">
           <img src="assets/img/ProjectImg/5VReg.jpeg" class="img-fluid border border-dark" alt="">
           <div class="portfolio-info">
-            <h4>Hardware Engineering</h4>
+            <span class="badge bg-danger me-1">Hardware Engineering <i class="bi bi-cpu"></i></span>
             <p>Simple 5V Voltage Regulator using the L7805 IC</p>
             <a href="ProjectSites/voltReg.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
@@ -303,7 +312,7 @@
         <div class="portfolio-content h-100">
           <img src="assets/img/ProjectImg/ece243.png" class="img-fluid border border-dark" alt="">
           <div class="portfolio-info">
-            <h4>Embedded Software</h4>
+            <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
             <p>Reversi Game using DE1-SoC/NIOS-V Processor</p>
             <a href="ProjectSites/ece243.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
           </div>
@@ -315,7 +324,7 @@
         <div class="portfolio-content h-100">
           <img src="assets/img/ProjectImg/pokemon.png" class="img-fluid border border-dark" alt="">
           <div class="portfolio-info">
-            <h4>High-Level Software</h4>
+            <span class="badge bg-dark me-1">High-Level Software <i class="bi bi-code-slash"></i></span>
             <p>Terminal-Based simulation of Pokemon made in Java using .txt I/O</p>
             <a href="https://github.com/hishamkaleem27/Terminal-Pokemon" title="Github Repo" class="details-link" target="_blank"><i class="bi bi-github"></i></a>
           </div>
@@ -327,7 +336,7 @@
         <div class="portfolio-content h-100">
           <img src="assets/img/ProjectImg/nba.jpeg" class="img-fluid border border-dark" alt="">
           <div class="portfolio-info">
-            <h4>High-Level Software</h4>
+            <span class="badge bg-dark me-1">High-Level Software <i class="bi bi-code-slash"></i></span>
             <p>NBA Trade Simulator made in Python using PyGame and TKinter GUI</p>
             <a href="https://github.com/hishamkaleem27/NBA-Trade-Simulator" title="Github Repo" class="details-link" target="_blank"><i class="bi bi-github"></i></a>
           </div>
