Fixed tag spacing

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="card-body">
         <h5 class="card-title"><strong>FINCH Firmware + Data Engineer - UTAT 🛰️</strong></h5>
             <span class="badge bg-dark me-1">High-Level Software <i class="bi bi-code-slash"></i></span>
-            <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
+            <span class="badge bg-primary me-1 mb-2">Embedded Software <i class="bi bi-motherboard"></i></span>
         <p class="card-text"><em>Coming Soon!</em></p>
       </div>
     </div>
@@ -201,7 +201,7 @@
       <img src="assets/img/WorkImg/art.jpeg" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>Embedded Systems Engineer - UTRA ART 🤖</strong></h5>
-            <span class="badge bg-primary me-1">Embedded Software <i class="bi bi-motherboard"></i></span>
+            <span class="badge bg-primary me-1 mb-2">Embedded Software <i class="bi bi-motherboard"></i></span>
         <p class="card-text"><em>Wrote a C++ Script that interacts with an Arduino and Raspberry Pi to recieve and
           enable brake signals for smooth rover braking</em></p>
       </div>
@@ -230,7 +230,7 @@
       <img src="assets/img/WorkImg/PCB.png" class="card-img-top" alt="Experience Image">
       <div class="card-body">
         <h5 class="card-title"><strong>PCB Engineering Intern - Jitterware Inc 📟</strong></h5>
-          <span class="badge bg-danger me-1">Hardware Engineering <i class="bi bi-cpu"></i></span>
+          <span class="badge bg-danger me-1 mb-2">Hardware Engineering <i class="bi bi-cpu"></i></span>
         <p class="card-text"><em>Designed schematics and a multilayer PCB in KiCAD for an open-source, analog hall-effect sensor keyboard </em></p>
         <a href="WorkSites/jitterware.html" class="btn btn-outline-primary">Read More</a>
       </div>
