--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-
+  <!--GA4-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HSCYM8R1ZY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-HSCYM8R1ZY');
+  </script>
 
 </head>
 
