Update ece295 text

--- a/ProjectSites/ece295.html
+++ b/ProjectSites/ece295.html
@@ -78,7 +78,9 @@
               Defined Radio (SDR). Our reciever chain recieves raw, unfiltered signals from an antenna and passes them through a <strong>
                limiter circuit</strong> to protect board elements from high voltages, a <strong>bandpass filter</strong> to pass through
                signals only in the 8-16 MHz range, two <strong>quadrature mixers</strong> to mix signals and two <strong>lowpass filter
-               + amplifier </strong> configurations to further filter signals and amplify them before transmitting signals to another subsystem
+               + amplifier </strong> configurations to further filter signals and amplify them before transmitting signals to another subsystem.
+               Overall, the primary design focuses for our reciever were <strong>simplicity</strong> in design/assembly/debugging and
+                <strong>power efficiency</strong>!
             </p>
           </div>
           <h3><strong>PCB Design and Assembly 📟🛠️</strong></h3>
