--- a/ProjectSites/ece295.html
+++ b/ProjectSites/ece295.html
@@ -85,7 +85,8 @@
           </div>
           <h3><strong>PCB Design and Assembly 📟🛠️</strong></h3>
             <p>
-              After creating detailed electrical schematics for each subcomponent of the reciever chain as well as power and I/O, the team  
+              After creating detailed electrical schematics and conducting simulations in <strong>LTspice</strong> for each subcomponent 
+              of the reciever chain as well as power and I/O, the team  
               utilized <strong>Altium CAD</strong> to design the <strong>PCB layout</strong> shown below. I was in charge of placing and 
               arranging component footprints in a space-efficient manner as well as routing the majority of traces on the board and 
               introducing power/ground planes. When it came to assembly, I also soldered the majority of the through-hole and SMD components
