--- a/WorkSites/werl.html
+++ b/WorkSites/werl.html
@@ -8,22 +8,18 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
-  <!-- Favicons -->
   <link href="../assets/img/sitecon.png" rel="icon">
 
-  <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Poppins&family=Raleway&display=swap" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Main CSS File -->
   <link href="../assets/css/main.css" rel="stylesheet">
 </head>
 
@@ -59,51 +55,44 @@
   </header>
 
   <main class="main">
-    <!-- WERL Experience Section -->
     <section id="werl" class="about section">
       <div class="container section-title" data-aos="fade-up">
         <h2>WERL Research Internship 🔬</h2>
       </div>
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="../assets/img/SiteImages/WerlImg/device.jpg" class="img-fluid border border-dark" alt="" style="height: 450px; object-fit: cover;">
+            <figure class="text-center">
+              <img src="../assets/img/SiteImages/WerlImg/device.jpg" class="img-fluid border border-dark" alt="Device Image" style="height: 450px; object-fit: cover;">
+            </figure>
           </div>
           <div class="col-lg-8 content">
             <h3><strong>Creating a Low-cost, Moisture-Resistant Sensor Device📱</strong></h3>
-            <p>
-              During this research internship at the Water and Energy Research Lab (WERL), a lab within the Department of Mechanical and Industrial
-              engineering at the University of Toronto, I collaborated with a PhD student in the lab and worked on the
-              <strong>electronic/software/mechanical design, fabrication, testing, and validation</strong> of a sensor probe device aiming
-              to measure dissolved solids levels in septic tank wastewater samples in rural communities.
-            </p>
-            <p>
-              The main considerations/factors and the ideal metrics that went into the design of the device are:
-            </p>
+            <p>During this research internship at the Water and Energy Research Lab (WERL), a lab within the Department of Mechanical and Industrial engineering at the University of Toronto, I collaborated with a PhD student in the lab and worked on the <strong>electronic/software/mechanical design, fabrication, testing, and validation</strong> of a sensor probe device aiming to measure dissolved solids levels in septic tank wastewater samples in rural communities.</p>
+            <p>The main considerations/factors and the ideal metrics that went into the design of the device are:</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-clock"></i> <strong>Runtime</strong><em> (&lt; 24 hours)</em></li>
-                  <li><i class="bi bi-currency-dollar"></i> <strong>Cost</strong><em> (&lt; $170 USD)</em></li>
-                  <li><i class="bi bi-bullseye"></i> <strong>Accuracy</strong><em> (R<sup>2</sup> &gt; 0.8)</em></li>
+                  <li><i class="bi bi-clock"></i> <strong>Runtime</strong><em> (< 24 hours)</em></li>
+                  <li><i class="bi bi-currency-dollar"></i> <strong>Cost</strong><em> (< $170 USD)</em></li>
+                  <li><i class="bi bi-bullseye"></i> <strong>Accuracy</strong><em> (R<sup>2</sup> > 0.8)</em></li>
                   <li><i class="bi bi-droplet"></i> <strong>Water Resistance</strong><em> (IPX7+)</em></li>
                 </ul>
               </div>
             </div>
             <h3><strong>Device CAD Design ⚙️</strong></h3>
-            <p>
-              The CAD design of the system enclosure and mechanical parts, created using <strong>Fusion 360</strong>, is shown below. 
-              It is intended to be manufactured using liquid resin printing for maximal water resistance, and the STL files are also 
-              available for download as a ZIP folder using the button below!
-            </p>
+            <p>The CAD design of the system enclosure and mechanical parts, created using <strong>Fusion 360</strong>, is shown below. It is intended to be manufactured using liquid resin printing for maximal water resistance, and the STL files are also available for download as a ZIP folder using the button below!</p>
           </div>
         </div>
       </div>
 
-      <div class="d-flex flex-wrap" style="width: 100%;">
-        <img src="../assets/img/SiteImages/WerlImg/CAD Model.png" alt="" class="border border-dark" style="width: 50%; height: auto; display: block;">
-        <img src="../assets/img/SiteImages/WerlImg/CAD Model2.png" alt="" class="border border-dark" style="width: 50%; height: auto; display: block;">
+      <div class="d-flex flex-wrap justify-content-center" style="width: 100%;">
+        <figure class="text-center m-2" style="width: 48%;">
+          <img src="../assets/img/SiteImages/WerlImg/CAD Model.png" alt="CAD Model Front View" class="img-fluid border border-dark" style="height: 330px; object-fit: cover; width: 100%;">
+        </figure>
+        <figure class="text-center m-2" style="width: 48%;">
+          <img src="../assets/img/SiteImages/WerlImg/CAD Model2.png" alt="CAD Model Rear View" class="img-fluid border border-dark">
+        </figure>
       </div>
 
       <div class="text-center my-4">
@@ -113,26 +102,25 @@
       </div>
 
       <div class="container">
-        <h3><strong>Electrical and Software Components ⚡💻</strong></h3>
-
+        <h3><strong>Electrical and Software Components⚡️💻</strong></h3>
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-8">
-            <p class="text-start">
-              The device utilizes a Feather M0 Datalogger to control and obtain analog data from the connected <strong>KY040 Rotary Encoder, 
-              MG996R Continuous Servo Motor,</strong> and <strong>HX711 load cell/amplifier.</strong> Loaded onto this Feather is
-              a script written in <strong>Arduino C++</strong> that utilizes the servo and HX711 libraries to calibrate and obtain data
-              from the load cell, control motor rotation, and obtain encoder pulse data. Once obtained, the load cell/encoder data is
-              converted to real-world force measurements/distances in the script and is incrementally outputed to the 
-              serial monitor where the <strong>CoolTerm</strong> application stores/exports data in a .txt file for multimodal use 
-              (excel, parsing, etc.). A research poster that I presented at the annual 
-              <em>Undergraduate Engineering Research Day (UnERD) </em> at UofT summarizing the project is shown below, as well as a GitHub link 
-              to the C++ script!
-            </p>
+            <p class="text-start">The device utilizes a Feather M0 Datalogger to control and obtain analog data from the connected 
+            <strong>KY040 Rotary Encoder, MG996R Continuous Servo Motor,</strong> and <strong>HX711 load cell/amplifier.</strong> 
+            Flashed onto this Feather is a script written in <strong>C++</strong> 
+            that utilizes the servo and HX711 libraries to calibrate and obtain data from the load cell, control motor rotation, 
+            and obtain encoder pulse data. Once obtained, the load cell/encoder data is converted to real-world force measurements/distances
+             in the script and is incrementally outputed to the serial monitor where the <strong>CoolTerm</strong> application stores/exports 
+             data in a .txt file for multimodal use (excel, parsing, etc.). A research poster that I presented at the annual 
+             <em>Undergraduate Engineering Research Day (UnERD) </em> at UofT summarizing the project is shown below, as well as a 
+             GitHub link to the C++ script!</p>
           </div>
         </div>
 
         <div class="text-center my-4">
-          <img src="../assets/img/SiteImages/WerlImg/unerd.png" alt="" class="img-fluid border border-dark" style="max-width: 90%; height: auto;">
+          <figure class="text-center">
+            <img src="../assets/img/SiteImages/WerlImg/unerd.png" alt="UnERD Poster" class="img-fluid border border-dark" style="max-width: 90%; height: auto;">
+          </figure>
         </div>
 
         <div class="text-center mb-5">
@@ -145,7 +133,33 @@
         </div>
       </div>
 
-      <!-- Back Button -->
+      <div class="container">
+        <h3><strong>Cellular Sensor Data Transfer📡</strong></h3>
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-8">
+            <p class="text-start">In addition to the design of my own device, I was also involved in helping the PhD student with a similiar
+              device (pictured below) that utilizes many more sensors and sampling methods to determine further wastewater characteristics. 
+              One of my tasks involved writing a <strong>C++ script</strong> flashed onto the feather that utilizes the <strong>Blues API</strong>
+              to send sensor data via <strong>i<sup>2</sup>c</strong> to a Blues Notecard/Notecarrier which then sends data in <strong>JSON</strong> format
+              to an <strong>AWS S3 bucket</strong>. The script is available for viewing/download via the Github link below!
+            </p>
+            <a href="https://github.com/hishamkaleem27/Septic-Comm" target="_blank" class="btn btn-outline-dark btn-sm">
+              <i class="bi bi-github me-1"></i> Script on GitHub
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex flex-wrap justify-content-center" style="width: 100%;">
+        <figure class="text-center m-5" style="max-width: 400px; flex: 1;">
+          <img src="../assets/img/SiteImages/WerlImg/dev.jpg" alt="CAD Model Front View" class="img-fluid border border-dark">
+          <figcaption class="mt-2"><em>Device Prototype (Notecard not shown)</em></figcaption>
+        </figure>
+        <figure class="text-center m-5" style="max-width: 400px; flex: 1;">
+          <img src="../assets/img/SiteImages/WerlImg/test.jpg" alt="CAD Model Rear View" class="img-fluid border border-dark">
+          <figcaption class="mt-2"><em>Testing out Script/Notecard With Various Sensors</em></figcaption>
+        </figure>
+      </div>
+
       <div class="text-center">
         <a class="btn btn-outline-primary mt-3" href="../index.html#experience">← Back to Experience</a>
       </div>
@@ -163,13 +177,9 @@
     </div>
   </footer>
 
-  <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Preloader -->
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/vendor/php-email-form/validate.js"></script>
   <script src="../assets/vendor/aos/aos.js"></script>
@@ -180,14 +190,8 @@
   <script src="../assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-
-  <!-- Main JS File -->
   <script src="../assets/js/main.js"></script>
-
-  <!-- Init AOS -->
-  <script>
-    AOS.init();
-  </script>
+  <script>AOS.init();</script>
 </body>
 
 </html>
