--- a/index.html
+++ b/index.html
@@ -132,58 +132,13 @@
 
     </section><!-- /About Section -->
 
-    <!-- Highlights Section -->
-    <section id="stats" class="stats section">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-terminal"></i>
-              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>High + Low-Level</strong> <span>languages known </span></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-motherboard"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Multilayer PCBs</strong> <span>designed and tested</span></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-pc-display"></i>
-              <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>CAD Programs</strong><br><span>experienced in</span></p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="stats-item">
-              <i class="bi bi-people-fill"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Design Teams</strong><br><span>contributed towards</span></p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section><!-- /Highlight Section -->
-
 
     <!-- Experience Section -->
     <section id="experience" class="skills section light-background">
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Experience</h2>
-        <p style="font-size: 1.1rem;"><em>Highlights of my engineering-related work experience over the past few years. Click the "read more" buttons 
+        <p style="font-size: 1.1rem;"><em>Highlights from my engineering-related work experience over the past few years. Click the "read more" buttons 
           for more details!</em></p>
       </div>
 
