--- a/WorkSites/werl.html
+++ b/WorkSites/werl.html
@@ -63,7 +63,7 @@
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
             <figure class="text-center">
-              <img src="../assets/img/SiteImages/WerlImg/device.jpg" class="img-fluid border border-dark" alt="Device Image" style="height: 450px; object-fit: cover;">
+              <img src="../assets/img/SiteImages/WerlImg/device.jpg" class="img-fluid border border-dark" alt="Device Image" style="height: 100%; object-fit: cover;">
             </figure>
           </div>
           <div class="col-lg-8 content">
@@ -88,7 +88,7 @@
 
       <div class="d-flex flex-wrap justify-content-center" style="width: 100%;">
         <figure class="text-center m-2" style="width: 48%;">
-          <img src="../assets/img/SiteImages/WerlImg/CAD Model.png" alt="CAD Model Front View" class="img-fluid border border-dark" style="height: 330px; object-fit: cover; width: 100%;">
+          <img src="../assets/img/SiteImages/WerlImg/CAD Model.png" alt="CAD Model Front View" class="img-fluid border border-dark" style="height: 100%; object-fit: cover; width: 100%;">
         </figure>
         <figure class="text-center m-2" style="width: 48%;">
           <img src="../assets/img/SiteImages/WerlImg/CAD Model2.png" alt="CAD Model Rear View" class="img-fluid border border-dark">
