grammar fix werl page

--- a/WorkSites/werl.html
+++ b/WorkSites/werl.html
@@ -137,8 +137,8 @@
         <h3><strong>Cellular Sensor Data Transfer📡</strong></h3>
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-8">
-            <p class="text-start">In addition to the design of my own device, I was also involved in helping the PhD student with a similiar
-              device (pictured below) that utilizes many more sensors and sampling methods to determine further wastewater characteristics. 
+            <p class="text-start">In addition to the design of my own device, I was also involved in helping with a similiar
+              device (pictured below) that utilizes many more sensors and sampling methods to further determine wastewater characteristics. 
               One of my tasks involved writing a <strong>C++ script</strong> flashed onto the feather that utilizes the <strong>Blues API</strong>
               to send sensor data via <strong>i<sup>2</sup>c</strong> to a Blues Notecard/Notecarrier which then sends data in <strong>JSON</strong> format
               to an <strong>AWS S3 bucket</strong>. The script is available for viewing/download via the Github link below!
