minor text fix (werl)

--- a/WorkSites/werl.html
+++ b/WorkSites/werl.html
@@ -68,7 +68,9 @@
           </div>
           <div class="col-lg-8 content">
             <h3><strong>Creating a Low-cost, Moisture-Resistant Sensor Device📱</strong></h3>
-            <p>During this research internship at the Water and Energy Research Lab (WERL), a lab within the Department of Mechanical and Industrial engineering at the University of Toronto, I collaborated with a PhD student in the lab and worked on the <strong>electronic/software/mechanical design, fabrication, testing, and validation</strong> of a sensor probe device aiming to measure dissolved solids levels in septic tank wastewater samples in rural communities.</p>
+            <p>During this research internship at the Water and Energy Research Lab (WERL), a lab within the Department of 
+              Mechanical and Industrial engineering at the University of Toronto, I collaborated with a PhD student in the lab
+               and worked on the <strong>mechanical/electronic/software design, fabrication, testing, and validation</strong> of a sensor probe device aiming to measure dissolved solids levels in septic tank wastewater samples in rural communities.</p>
             <p>The main considerations/factors and the ideal metrics that went into the design of the device are:</p>
             <div class="row">
               <div class="col-lg-6">
