updated werl text

--- a/WorkSites/werl.html
+++ b/WorkSites/werl.html
@@ -108,7 +108,7 @@
         <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-8">
             <p class="text-start">The device utilizes a Feather M0 Datalogger to control and obtain analog data from the connected 
-            <strong>KY040 Rotary Encoder, MG996R Continuous Servo Motor,</strong> and <strong>HX711 load cell/amplifier.</strong> 
+            <strong>Rotary Encoder, Continuous Servo Motor,</strong> and <strong>Load Cell/Amplifier.</strong> 
             Flashed onto this Feather is a script written in <strong>C++</strong> 
             that utilizes the servo and HX711 libraries to calibrate and obtain data from the load cell, control motor rotation, 
             and obtain encoder pulse data. Once obtained, the load cell/encoder data is converted to real-world force measurements/distances
